output/grammarA60Parser.java
// $ANTLR null C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g 2020-02-26 12:20:37

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class grammarA60Parser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACTION", "ALORS", "ARRAYSEG", 
		"BOOLEXPR", "BORNES", "COMMENT", "CONDITION", "DEFINITION", "FOR_CONDITION", 
		"FOR_LIST", "FOR_LIST_ELEM", "FOR_STATEMENT", "IDENTIFIER", "IF", "IF_CLAUSE", 
		"IF_STATEMENT", "PARAMETER_DELIMITER", "PARAMETRES", "PARAM_LIST", "PROCEDURE_STATEMENT", 
		"PROCH", "PROG", "SINON", "SPECIFIER", "STATEMENT_BIS", "STEP", "STRING", 
		"TAIL", "TYPARPROCDEC", "TYPE", "UNLABELLED_BLOCK", "UNSIGNED_NUMBER", 
		"UNTIL", "VP", "WS", "'%'", "'&&'", "'&'", "'('", "')'", "'*'", "'**'", 
		"'+'", "','", "'-'", "'/'", "':'", "':='", "';'", "'<'", "'<='", "'<=>'", 
		"'<>'", "'='", "'=>'", "'>'", "'>='", "'AND'", "'FALSE'", "'OR'", "'TRUE'", 
		"'['", "']'", "'and'", "'array'", "'begin'", "'do'", "'else'", "'end'", 
		"'for'", "'go to'", "'goto'", "'if'", "'inline'", "'label'", "'label:'", 
		"'or'", "'own'", "'procedure'", "'step'", "'string'", "'switch'", "'then'", 
		"'until'", "'value'", "'while'", "'|'", "'||'", "'~'"
	};
	public static final int EOF=-1;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int T__89=89;
	public static final int T__90=90;
	public static final int T__91=91;
	public static final int T__92=92;
	public static final int ACTION=4;
	public static final int ALORS=5;
	public static final int ARRAYSEG=6;
	public static final int BOOLEXPR=7;
	public static final int BORNES=8;
	public static final int COMMENT=9;
	public static final int CONDITION=10;
	public static final int DEFINITION=11;
	public static final int FOR_CONDITION=12;
	public static final int FOR_LIST=13;
	public static final int FOR_LIST_ELEM=14;
	public static final int FOR_STATEMENT=15;
	public static final int IDENTIFIER=16;
	public static final int IF=17;
	public static final int IF_CLAUSE=18;
	public static final int IF_STATEMENT=19;
	public static final int PARAMETER_DELIMITER=20;
	public static final int PARAMETRES=21;
	public static final int PARAM_LIST=22;
	public static final int PROCEDURE_STATEMENT=23;
	public static final int PROCH=24;
	public static final int PROG=25;
	public static final int SINON=26;
	public static final int SPECIFIER=27;
	public static final int STATEMENT_BIS=28;
	public static final int STEP=29;
	public static final int STRING=30;
	public static final int TAIL=31;
	public static final int TYPARPROCDEC=32;
	public static final int TYPE=33;
	public static final int UNLABELLED_BLOCK=34;
	public static final int UNSIGNED_NUMBER=35;
	public static final int UNTIL=36;
	public static final int VP=37;
	public static final int WS=38;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "array_segment", "fact_type_array_procedure", "boolean_expr", 
		"logic_expr", "actual_parameter_list", "factor_expr", "after_statement_bis", 
		"program_ter", "logic_expr_ter", "type_list", "switch_declaration", "identifier_list", 
		"go_to_statement", "after_identifier", "add_expr", "if_statement", "specifier", 
		"program", "unlabelled_basic_statement", "for_list_element", "unlabelled_block", 
		"for_clause", "program_bis", "statement_bis", "unlabelled", "type_array_proc_declaration_bis", 
		"bound_pair", "procedure_declaration", "actual_parameter", "block_head", 
		"if_clause", "type_array_proc_declaration", "for_statement", "conditional_statement", 
		"bound_pair_list", "expression", "value_part", "root", "switch_list", 
		"compound_tail", "mult_expr", "logic_expr_bis", "formal_parameter_list", 
		"array_declaration", "array_list", "value", "declaration", "procedure_heading", 
		"type_array_proc_declaration_ter", "statement"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public grammarA60Parser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public grammarA60Parser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public grammarA60Parser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return grammarA60Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g"; }


	public static class root_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "root"
	// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:41:1: root : program -> program ;
	public final grammarA60Parser.root_return root() throws RecognitionException {
		grammarA60Parser.root_return retval = new grammarA60Parser.root_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope program1 =null;

		RewriteRuleSubtreeStream stream_program=new RewriteRuleSubtreeStream(adaptor,"rule program");

		try { dbg.enterRule(getGrammarFileName(), "root");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(41, 0);

		try {
			// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:41:5: ( program -> program )
			dbg.enterAlt(1);

			// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:42:5: program
			{
			dbg.location(42,5);
			pushFollow(FOLLOW_program_in_root255);
			program1=program();
			state._fsp--;

			stream_program.add(program1.getTree());
			// AST REWRITE
			// elements: program
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 42:13: -> program
			{
				dbg.location(42,16);
				adaptor.addChild(root_0, stream_program.nextTree());
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(43, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "root");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "root"


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:45:1: program : ( 'begin' unlabelled -> unlabelled | 'label' ':' program | declaration ';' program -> ^( PROG declaration program ) | 'inline' '(' STRING ')' ';' program );
	public final grammarA60Parser.program_return program() throws RecognitionException {
		grammarA60Parser.program_return retval = new grammarA60Parser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal2=null;
		Token string_literal4=null;
		Token char_literal5=null;
		Token char_literal8=null;
		Token string_literal10=null;
		Token char_literal11=null;
		Token STRING12=null;
		Token char_literal13=null;
		Token char_literal14=null;
		ParserRuleReturnScope unlabelled3 =null;
		ParserRuleReturnScope program6 =null;
		ParserRuleReturnScope declaration7 =null;
		ParserRuleReturnScope program9 =null;
		ParserRuleReturnScope program15 =null;

		Object string_literal2_tree=null;
		Object string_literal4_tree=null;
		Object char_literal5_tree=null;
		Object char_literal8_tree=null;
		Object string_literal10_tree=null;
		Object char_literal11_tree=null;
		Object STRING12_tree=null;
		Object char_literal13_tree=null;
		Object char_literal14_tree=null;
		RewriteRuleTokenStream stream_69=new RewriteRuleTokenStream(adaptor,"token 69");
		RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
		RewriteRuleSubtreeStream stream_unlabelled=new RewriteRuleSubtreeStream(adaptor,"rule unlabelled");
		RewriteRuleSubtreeStream stream_program=new RewriteRuleSubtreeStream(adaptor,"rule program");
		RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");

		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(45, 0);

		try {
			// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:45:8: ( 'begin' unlabelled -> unlabelled | 'label' ':' program | declaration ';' program -> ^( PROG declaration program ) | 'inline' '(' STRING ')' ';' program )
			int alt1=4;
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			switch ( input.LA(1) ) {
			case 69:
				{
				alt1=1;
				}
				break;
			case 78:
				{
				alt1=2;
				}
				break;
			case TYPE:
			case 68:
			case 81:
			case 82:
			case 85:
				{
				alt1=3;
				}
				break;
			case 77:
				{
				alt1=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:46:5: 'begin' unlabelled
					{
					dbg.location(46,5);
					string_literal2=(Token)match(input,69,FOLLOW_69_in_program271);  
					stream_69.add(string_literal2);
					dbg.location(46,13);
					pushFollow(FOLLOW_unlabelled_in_program273);
					unlabelled3=unlabelled();
					state._fsp--;

					stream_unlabelled.add(unlabelled3.getTree());
					// AST REWRITE
					// elements: unlabelled
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 46:24: -> unlabelled
					{
						dbg.location(46,28);
						adaptor.addChild(root_0, stream_unlabelled.nextTree());
					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:47:7: 'label' ':' program
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(47,7);
					string_literal4=(Token)match(input,78,FOLLOW_78_in_program286); 
					string_literal4_tree = (Object)adaptor.create(string_literal4);
					adaptor.addChild(root_0, string_literal4_tree);
					dbg.location(47,15);
					char_literal5=(Token)match(input,50,FOLLOW_50_in_program288); 
					char_literal5_tree = (Object)adaptor.create(char_literal5);
					adaptor.addChild(root_0, char_literal5_tree);
					dbg.location(47,19);
					pushFollow(FOLLOW_program_in_program290);
					program6=program();
					state._fsp--;

					adaptor.addChild(root_0, program6.getTree());

					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:48:7: declaration ';' program
					{
					dbg.location(48,7);
					pushFollow(FOLLOW_declaration_in_program298);
					declaration7=declaration();
					state._fsp--;

					stream_declaration.add(declaration7.getTree());dbg.location(48,19);
					char_literal8=(Token)match(input,52,FOLLOW_52_in_program300);  
					stream_52.add(char_literal8);
					dbg.location(48,23);
					pushFollow(FOLLOW_program_in_program302);
					program9=program();
					state._fsp--;

					stream_program.add(program9.getTree());
					// AST REWRITE
					// elements: declaration, program
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 48:31: -> ^( PROG declaration program )
					{
						dbg.location(48,34);
						// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:48:34: ^( PROG declaration program )
						{
						Object root_1 = (Object)adaptor.nil();
						dbg.location(48,36);
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROG, "PROG"), root_1);
						dbg.location(48,41);
						adaptor.addChild(root_1, stream_declaration.nextTree());dbg.location(48,53);
						adaptor.addChild(root_1, stream_program.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 4 :
					dbg.enterAlt(4);

					// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:49:7: 'inline' '(' STRING ')' ';' program
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(49,7);
					string_literal10=(Token)match(input,77,FOLLOW_77_in_program320); 
					string_literal10_tree = (Object)adaptor.create(string_literal10);
					adaptor.addChild(root_0, string_literal10_tree);
					dbg.location(49,16);
					char_literal11=(Token)match(input,42,FOLLOW_42_in_program322); 
					char_literal11_tree = (Object)adaptor.create(char_literal11);
					adaptor.addChild(root_0, char_literal11_tree);
					dbg.location(49,20);
					STRING12=(Token)match(input,STRING,FOLLOW_STRING_in_program324); 
					STRING12_tree = (Object)adaptor.create(STRING12);
					adaptor.addChild(root_0, STRING12_tree);
					dbg.location(49,27);
					char_literal13=(Token)match(input,43,FOLLOW_43_in_program326); 
					char_literal13_tree = (Object)adaptor.create(char_literal13);
					adaptor.addChild(root_0, char_literal13_tree);
					dbg.location(49,31);
					char_literal14=(Token)match(input,52,FOLLOW_52_in_program328); 
					char_literal14_tree = (Object)adaptor.create(char_literal14);
					adaptor.addChild(root_0, char_literal14_tree);
					dbg.location(49,35);
					pushFollow(FOLLOW_program_in_program330);
					program15=program();
					state._fsp--;

					adaptor.addChild(root_0, program15.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(51, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "program"


	public static class program_bis_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program_bis"
	// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:53:1: program_bis : 'begin' unlabelled -> unlabelled ;
	public final grammarA60Parser.program_bis_return program_bis() throws RecognitionException {
		grammarA60Parser.program_bis_return retval = new grammarA60Parser.program_bis_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal16=null;
		ParserRuleReturnScope unlabelled17 =null;

		Object string_literal16_tree=null;
		RewriteRuleTokenStream stream_69=new RewriteRuleTokenStream(adaptor,"token 69");
		RewriteRuleSubtreeStream stream_unlabelled=new RewriteRuleSubtreeStream(adaptor,"rule unlabelled");

		try { dbg.enterRule(getGrammarFileName(), "program_bis");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(53, 0);

		try {
			// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:53:12: ( 'begin' unlabelled -> unlabelled )
			dbg.enterAlt(1);

			// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:54:5: 'begin' unlabelled
			{
			dbg.location(54,5);
			string_literal16=(Token)match(input,69,FOLLOW_69_in_program_bis343);  
			stream_69.add(string_literal16);
			dbg.location(54,13);
			pushFollow(FOLLOW_unlabelled_in_program_bis345);
			unlabelled17=unlabelled();
			state._fsp--;

			stream_unlabelled.add(unlabelled17.getTree());
			// AST REWRITE
			// elements: unlabelled
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 54:23: -> unlabelled
			{
				dbg.location(54,27);
				adaptor.addChild(root_0, stream_unlabelled.nextTree());
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(55, 0);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program_bis");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "program_bis"


	public static class program_ter_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program_ter"
	// C:\\Users\\malau\\Documents\\TNCY\\2A\\Compil\\hantz7u\\grammarA60.g:57:1: program_ter : ( 'begin' unlabelled -> unlabelled | 'label' ( ':' ( program_bis | for_statement | conditional_statement ) | identifier_list ';' ( specifier identifier_list ';' )* ( program_bis | for_statement | conditional_statement ) ) );
	public final grammarA60Parser.program_ter_return program_ter() throws RecognitionException {
		grammarA60Parser.program_ter_return retval = new grammarA60Parser.program_ter_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal18=null;
		Token string_literal20=null;
		Token char_literal21=null;
		Token char_literal26=null;
		Token char_literal29=null;
		ParserRuleReturnScope unlabelled19 =null;
		ParserRuleReturnScope program_bis22 =null;
		ParserRuleReturnScope for_statement23 =null;
		ParserRuleReturnScope conditional_statement24 =null;
		ParserRuleReturnScope identifier_list25 =null;
